update ko language

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -615,7 +615,7 @@
   "Share to Obtain DGC": "Teilen, um DGC zu erhalten",
   "Buy": "Kaufen",
   "Node Sale": "Verkauf von Knoten",
-  "Purchase DGC": "DGC kaufen",
+  "Buy DGC": "DGC kaufen",
   "Enter wallet": "Wallet öffnen",
   "Transactions": "Transaktionen",
   "Authed KYC": "Autorisiertes KYC",
