--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -615,7 +615,7 @@
   "Share to Obtain DGC": "",
   "Buy": "",
   "Node Sale": "",
-  "Purchase DGC": "",
+  "Buy DGC": "",
   "Enter wallet": "",
   "Transactions": "",
   "Authed KYC": "",
