--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -613,8 +613,8 @@
   "Close Wallet": "Fermer le portefeuille",
   "Share to Obtain DGC": "Partager pour obtenir DGC",
   "Buy": "Acheter",
-  "Node Sale": "Vente de Nœuds",
-  "Purchase DGC": "Acheter DGC",
+  "Node Sale": "Venta de Node",
+  "Buy DGC": "Comprar DGC",
   "Enter wallet": "Ouvrir portefeuille",
   "Transactions": "Transactions",
   "Authed KYC": "KYC autorisé",
