--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -615,7 +615,7 @@
   "Share to Obtain DGC": "Bagikan untuk Mendapatkan DGC",
   "Buy": "Beli",
   "Node Sale": "Penjualan Node",
-  "Purchase DGC": "Beli DGC",
+  "Buy DGC": "Beli DGC",
   "Enter wallet": "Buka dompet",
   "Transactions": "Transaksi",
   "Authed KYC": "KYC yang Diotorisasi",
