--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -616,8 +616,8 @@
   "Close Wallet": "ウォレットを閉じる",
   "Share to Obtain DGC": "DGC を取得するために共有",
   "Buy": "購入",
-  "Node Sale": "ノード販売",
-  "Purchase DGC": "DGCを購入",
+  "Node Sale": "ノードセール",
+  "Buy DGC": "DGCを購入",
   "Enter wallet": "ウォレットを開く",
   "Transactions": "取引履歴",
   "Authed KYC": "認証済み KYC",
