--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -614,8 +614,8 @@
   "Close Wallet": "Fechar a carteira",
   "Share to Obtain DGC": "Compartilhar para obter DGC",
   "Buy": "Comprar",
-  "Node Sale": "Venda de Nó",
-  "Purchase DGC": "Comprar DGC",
+  "Node Sale": "Venda Node",
+  "Buy DGC": "Comprar DGC",
   "Enter wallet": "Abrir carteira",
   "Transactions": "Transações",
   "Authed KYC": "KYC autorizado",
