--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -613,8 +613,8 @@
   "Close Wallet": "Закрыть кошелька",
   "Share to Obtain DGC": "Поделиться для получения DGC",
   "Buy": "Купить",
-  "Node Sale": "Продажа узла",
-  "Purchase DGC": "Купить DGC",
+  "Node Sale": "Продажа Node",
+  "Buy DGC": "Купить DGC",
   "Enter wallet": "Открыть кошелёк",
   "Transactions": "Транзакции",
   "Authed KYC": "Авторизованный KYC",
