--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -613,8 +613,8 @@
   "Close Wallet": "ปิดกระเป๋าเงิน",
   "Share to Obtain DGC": "แชร์เพื่อรับ DGC",
   "Buy": "ซื้อ",
-  "Node Sale": "การขายโหนด",
-  "Purchase DGC": "ซื้อ DGC",
+  "Node Sale": "การขาย Node",
+  "Buy DGC": "ซื้อ DGC",
   "Enter wallet": "เปิดกระเป๋าเงิน",
   "Transactions": "ธุรกรรม",
   "Authed KYC": "KYC ที่ได้รับการยืนยัน",
