--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -614,8 +614,8 @@
   "Close Wallet": "Cüzdanı Kapat",
   "Share to Obtain DGC": "DGC Almak için Paylaş",
   "Buy": "Satın Al",
-  "Node Sale": "Düğüm Satışı",
-  "Purchase DGC": "DGC Satın Al",
+  "Node Sale": "Node Satışı",
+  "Buy DGC": "DGC Satın Al",
   "Enter wallet": "Cüzdanı aç",
   "Transactions": "İşlemler",
   "Authed KYC": "Kimlik Doğrulama Onaylı",
