--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -615,7 +615,7 @@
   "Share to Obtain DGC": "Chia sẻ để nhận DGC",
   "Buy": "Mua",
   "Node Sale": "Bán Node",
-  "Purchase DGC": "Mua DGC",
+  "Buy DGC": "Mua DGC",
   "Enter wallet": "Mở ví",
   "Transactions": "Giao dịch",
   "Authed KYC": "KYC đã được xác thực",
