--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -77,7 +77,7 @@
   "Builder Mode": "构建模式",
   "Buy": "购买",
   "Node Sale": "节点销售",
-  "Purchase DGC": "购买DGC",
+  "Buy DGC": "购买DGC",
   "Enter wallet": "进入钱包",
   "Buy Now": "立即购买",
   "Bypass SSL verification for Websites": "绕过网站的 SSL 验证",
