--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -613,8 +613,8 @@
   "Close Wallet": "Fermer le portefeuille",
   "Share to Obtain DGC": "Partager pour obtenir DGC",
   "Buy": "Acheter",
-  "Node Sale": "Vente de Nœuds",
-  "Purchase DGC": "Acheter DGC",
+  "Node Sale": "Vente Node",
+  "Buy DGC": "Acheter DGC",
   "Enter wallet": "Ouvrir portefeuille",
   "Transactions": "Transactions",
   "Authed KYC": "KYC autorisé",
