update  tool tranlation

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -849,6 +849,20 @@
   "Paste or enter a link...": "Link einfügen oder eingeben...",
   "Enter text to translate...": "Text zum Übersetzen eingeben...",
   "Auto-detect": "Automatische Erkennung",
+  "Translate to": "Übersetzen nach",
+  "German": "Deutsch",
+  "English": "Englisch",
+  "Spanish": "Spanisch",
+  "French": "Französisch",
+  "Indonesian": "Indonesisch",
+  "Japanese": "Japanisch",
+  "Korean": "Koreanisch",
+  "Portuguese": "Portugiesisch",
+  "Russian": "Russisch",
+  "Thai": "Thailändisch",
+  "Turkish": "Türkisch",
+  "Vietnamese": "Vietnamesisch",
+  "Chinese": "Chinesisch",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Tiefes Denken, mathematische und schreibende Fähigkeiten ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Die KYC-Verifizierung ist auf einmal alle 10 Minuten beschränkt. Bitte versuchen Sie es später erneut.",
   "A single IP address can be used for a maximum of two KYC verifications": "Eine einzelne IP-Adresse kann maximal zweimal für die KYC-Verifizierung verwendet werden.",
