--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -851,6 +851,20 @@
   "Paste or enter a link...": "",
   "Enter text to translate...": "",
   "Auto-detect": "",
+  "Translate to": "",
+	"German": "",
+	"English": "",
+	"Spanish": "",
+	"French": "",
+	"Indonesian": "",
+	"Japanese": "",
+	"Korean": "",
+	"Portuguese": "",
+	"Russian": "",
+	"Thai": "",
+	"Turkish": "",
+	"Vietnamese": "",
+	"Chinese": "",
   "Deep thinking,mathematical and writing abilities ≈ o3": "",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "",
   "A single IP address can be used for a maximum of two KYC verifications": "",
