--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -837,7 +837,7 @@
   "Help me solve problems": "Aidez - moi à résoudre des problèmes",
   "Last for {{ time }} seconds": "Dure {{ time }} secondes",
   "Tool": "Herramienta",
-  "Search the web": "Rechercher sur le web",
+  "Search the Web": "Rechercher sur le web",
   "Search the Twitter": "Rechercher sur le Twitter",
   "Search the YouTube": "Rechercher sur le YouTube",
   "Translate": "Traducir",
@@ -850,6 +850,20 @@
   "Paste or enter a link...": "Pegar o ingresar un enlace...",
   "Enter text to translate...": "Ingrese texto para traducir...",
   "Auto-detect": "Detección automática",
+  "Translate to": "Traducir a",
+  "German": "alemán",
+  "English": "inglés",
+  "Spanish": "español",
+  "French": "francés",
+  "Indonesian": "indonesio",
+  "Japanese": "japonés",
+  "Korean": "coreano",
+  "Portuguese": "portugués",
+  "Russian": "ruso",
+  "Thai": "tailandés",
+  "Turkish": "turco",
+  "Vietnamese": "vietnamita",
+  "Chinese": "chino",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Pensée approfondie, capacités mathématiques et d'écriture ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "La vérification KYC est limitée à une fois toutes les 10 minutes. Veuillez réessayer plus tard.",
   "A single IP address can be used for a maximum of two KYC verifications": "Une seule adresse IP peut être utilisée au maximum deux fois pour les vérifications KYC.",
