--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -837,7 +837,7 @@
   "Help me solve problems": "Aidez - moi à résoudre des problèmes",
   "Last for {{ time }} seconds": "Dure {{ time }} secondes",
   "Tool": "Outil",
-  "Search the web": "Rechercher sur le web",
+  "Search the Web": "Rechercher sur le web",
   "Search the Twitter": "Rechercher sur le Twitter",
   "Search the YouTube": "Rechercher sur le YouTube",
   "Translate": "Traduire",
@@ -850,6 +850,20 @@
   "Paste or enter a link...": "Coller ou entrer un lien...",
   "Enter text to translate...": "Entrez le texte à traduire...",
   "Auto-detect": "Détection automatique",
+  "Translate to": "Traduire en",
+  "German": "allemand",
+  "English": "anglais",
+  "Spanish": "espagnol",
+  "French": "français",
+  "Indonesian": "indonésien",
+  "Japanese": "japonais",
+  "Korean": "coréen",
+  "Portuguese": "portugais",
+  "Russian": "russe",
+  "Thai": "thaï",
+  "Turkish": "turc",
+  "Vietnamese": "vietnamien",
+  "Chinese": "chinois",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Pensée approfondie, capacités mathématiques et d'écriture ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "La vérification KYC est limitée à une fois toutes les 10 minutes. Veuillez réessayer plus tard.",
   "A single IP address can be used for a maximum of two KYC verifications": "Une seule adresse IP peut être utilisée au maximum deux fois pour les vérifications KYC.",
