--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -838,7 +838,7 @@
   "Help me solve problems": "Bantu saya menyelesaikan masalah - masalah",
   "Last for {{ time }} seconds": "Berlangsung selama {{ time }} detik",
   "Tool": "Alat",
-  "Search the web": "Cari di web",
+  "Search the Web": "Cari di web",
   "Search the Twitter": "Cari di Twitter",
   "Search the YouTube": "Cari di YouTube",
   "Translate": "Menerjemahkan",
@@ -851,6 +851,20 @@
   "Paste or enter a link...": "Tempel atau masukkan tautan...",
   "Enter text to translate...": "Masukkan teks untuk diterjemahkan...",
   "Auto-detect": "Deteksi otomatis",
+  "Translate to": "Terjemahkan ke",
+  "German": "Jerman",
+  "English": "Inggris",
+  "Spanish": "Spanyol",
+  "French": "Prancis",
+  "Indonesian": "Indonesia",
+  "Japanese": "Jepang",
+  "Korean": "Korea",
+  "Portuguese": "Portugis",
+  "Russian": "Rusia",
+  "Thai": "Thailand",
+  "Turkish": "Turki",
+  "Vietnamese": "Vietnam",
+  "Chinese": "Tionghoa",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Pemikiran mendalam, kemampuan matematika dan penulisan ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Verifikasi KYC dibatasi hanya boleh dilakukan sekali setiap 10 menit. Silakan coba lagi nanti.",
   "A single IP address can be used for a maximum of two KYC verifications": "Sebuah alamat IP tunggal dapat digunakan maksimal untuk dua kali verifikasi KYC.",
