--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -838,7 +838,7 @@
   "Help me solve problems": "문제 해결을 돕 me 주세요.",
   "Last for {{ time }} seconds": "{{ time }} 초 동안 지속됩니다",
   "Tool": "도구",
-  "Search the web": "웹에서 검색하다",
+  "Search the Web": "웹에서 검색하다",
   "Search the Twitter": "트위터에서 검색하기",
   "Search the YouTube": "유튜브에서 검색하기",
   "Translate": "번역",
@@ -851,6 +851,20 @@
   "Paste or enter a link...": "링크를 붙여넣거나 입력하세요...",
   "Enter text to translate...": "번역할 텍스트를 입력하세요...",
   "Auto-detect": "자동 감지",
+  "Translate to": "번역 대상",
+  "German": "독일어",
+  "English": "영어",
+  "Spanish": "스페인어",
+  "French": "프랑스어",
+  "Indonesian": "인도네시아어",
+  "Japanese": "일본어",
+  "Korean": "한국어",
+  "Portuguese": "포르투갈어",
+  "Russian": "러시아어",
+  "Thai": "태국어",
+  "Turkish": "터키어",
+  "Vietnamese": "베트남어",
+  "Chinese": "중국어",
   "Deep thinking,mathematical and writing abilities ≈ o3": "깊은 사고, 수학적 능력과 창작 능력은 o3과 비슷하며",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 인증은 10분에 한 번으로 제한됩니다, 나중에 다시 시도해 주세요.",
   "A single IP address can be used for a maximum of two KYC verifications": "단일 IP 주소는 최대 두 번의 KYC 인증에 사용할 수 있습니다.",
