--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -838,7 +838,7 @@
   "Help me solve problems": "Ajude - me a resolver problemas",
   "Last for {{ time }} seconds": "Dura {{ time }} segundos",
   "Tool": "Ferramenta",
-  "Search the web": "Pesquisar na web",
+  "Search the Web": "Pesquisar na web",
   "Search the Twitter": "Pesquisar na Twitter",
   "Search the YouTube": "Pesquisar na YouTube",
   "Translate": "Traduzir",
@@ -851,6 +851,20 @@
   "Paste or enter a link...": "Colar ou inserir um link...",
   "Enter text to translate...": "Digite o texto para traduzir...",
   "Auto-detect": "Detecção automática",
+  "Translate to": "Traduzir para",
+  "German": "alemão",
+  "English": "inglês",
+  "Spanish": "espanhol",
+  "French": "francês",
+  "Indonesian": "indonésio",
+  "Japanese": "japonês",
+  "Korean": "coreano",
+  "Portuguese": "português",
+  "Russian": "russo",
+  "Thai": "tailandês",
+  "Turkish": "turco",
+  "Vietnamese": "vietnamita",
+  "Chinese": "chinês",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Pensamento profundo, habilidades matemáticas e de escrita ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "A verificação KYC é limitada a uma vez a cada 10 minutos. Por favor tente novamente mais tarde.",
   "A single IP address can be used for a maximum of two KYC verifications": "Um único endereço IP pode ser usado no máximo duas vezes para verificações KYC.",
