--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -837,7 +837,7 @@
   "Help me solve problems": "Помогите мне решить проблемы",
   "Last for {{ time }} seconds": "Длится {{ time }} секунд",
   "Tool": "Инструмент",
-  "Search the web": "Поиск в интернете",
+  "Search the Web": "Поиск в интернете",
   "Search the Twitter": "Поиск на Twitter",
   "Search the YouTube": "Поиск на YouTube",
   "Translate": "Переводить",
@@ -850,6 +850,20 @@
   "Paste or enter a link...": "Вставьте или введите ссылку...",
   "Enter text to translate...": "Введите текст для перевода...",
   "Auto-detect": "Автоопределение",
+  "Translate to": "Перевести на",
+  "German": "немецкий",
+  "English": "английский",
+  "Spanish": "испанский",
+  "French": "французский",
+  "Indonesian": "индонезийский",
+  "Japanese": "японский",
+  "Korean": "корейский",
+  "Portuguese": "португальский",
+  "Russian": "русский",
+  "Thai": "тайский",
+  "Turkish": "турецкий",
+  "Vietnamese": "вьетнамский",
+  "Chinese": "китайский",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Глубокое мышление, математические и писательские способности ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Верификация KYC ограничена одной процедурой каждые 10 минут, Пожалуйста, попробуйте еще раз позже.",
   "A single IP address can be used for a maximum of two KYC verifications": "Одна IP - адрес может быть использована максимум дважды для верификации KYC.",
