--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -837,7 +837,7 @@
   "Help me solve problems": "ช่วยฉันแก้ปัญหา",
   "Last for {{ time }} seconds": "ดำเนินต่อไปเป็นเวลา {{ time }} วินาที",
   "Tool": "เครื่องมือ",
-  "Search the web": "ค้นหาในเว็บ",
+  "Search the Web": "ค้นหาในเว็บ",
   "Search the Twitter": "ค้นหาบน Twitter",
   "Search the YouTube": "ค้นหาบน YouTube",
   "Translate": "แปล",
@@ -850,6 +850,20 @@
   "Paste or enter a link...": "วางหรือป้อนลิงก์...",
   "Enter text to translate...": "ป้อนข้อความที่จะแปล...",
   "Auto-detect": "ตรวจจับอัตโนมัติ",
+  "Translate to": "แปลเป็น",
+  "German": "เยอรมัน",
+  "English": "อังกฤษ",
+  "Spanish": "สเปน",
+  "French": "ฝรั่งเศส",
+  "Indonesian": "อินโดนีเซีย",
+  "Japanese": "ญี่ปุ่น",
+  "Korean": "เกาหลี",
+  "Portuguese": "โปรตุเกส",
+  "Russian": "รัสเซีย",
+  "Thai": "ไทย",
+  "Turkish": "ตุรกี",
+  "Vietnamese": "เวียดนาม",
+  "Chinese": "จีน",
   "Deep thinking,mathematical and writing abilities ≈ o3": "ความคิดลึกซึ้ง ความสามารถทางคณิตศาสตร์และทางการเขียน ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "การยืนยัน KYC จำกัดให้ทำได้เพียงครั้งเดียว ทุกๆ 10 นาที โปรดลองอีกครั้งในภายหลัง",
   "A single IP address can be used for a maximum of two KYC verifications": "ที่อยู่ IP เดียวสามารถใช้สำหรับการยืนยัน KYC ได้สูงสุดสองครั้ง",
