--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -850,6 +850,20 @@
   "Paste or enter a link...": "粘贴或输入链接...",
   "Enter text to translate...": "输入要翻译的文本...",
   "Auto-detect": "自动检测",
+  "Translate to": "翻译为",
+	"German": "德语",
+	"English": "英语",
+	"Spanish": "西班牙语",
+	"French": "法语",
+	"Indonesian": "印尼语",
+	"Japanese": "日语",
+	"Korean": "韩语",
+	"Portuguese": "葡萄牙语",
+	"Russian": "俄语",
+	"Thai": "泰语",
+	"Turkish": "土耳其语",
+	"Vietnamese": "越南语",
+	"Chinese": "汉语",
   "Deep thinking,mathematical and writing abilities ≈ o3": "深度思考，在数学、创意写作等任务性能上比肩o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 认证每 10 分钟只能进行一次。请稍后再试。",
   "A single IP address can be used for a maximum of two KYC verifications": "单个 IP 地址最多可用于两次 KYC 认证。",
