--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -838,7 +838,7 @@
   "Help me solve problems": "問題を解決するのを手伝ってください",
   "Last for {{ time }} seconds": "{{time}} 秒間続きます",
   "Tool": "ツール",
-  "Search the web": "ウェブで検索する",
+  "Search the Web": "ウェブで検索する",
   "Search the Twitter": "Twitter を検索する",
   "Search the YouTube": "YouTube を検索する",
   "Translate": "翻訳",
@@ -851,6 +851,20 @@
   "Paste or enter a link...": "リンクを貼り付けるか入力...",
   "Enter text to translate...": "翻訳するテキストを入力...",
   "Auto-detect": "自動検出",
+  "Translate to": "翻訳先",
+  "German": "ドイツ語",
+  "English": "英語",
+  "Spanish": "スペイン語",
+  "French": "フランス語",
+  "Indonesian": "インドネシア語",
+  "Japanese": "日本語",
+  "Korean": "韓国語",
+  "Portuguese": "ポルトガル語",
+  "Russian": "ロシア語",
+  "Thai": "タイ語",
+  "Turkish": "トルコ語",
+  "Vietnamese": "ベトナム語",
+  "Chinese": "中国語",
   "Deep thinking,mathematical and writing abilities ≈ o3": "深い思考、数学的能力と執筆能力は o3 に匹敵し",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 認証は 10 分に 1 回までに制限されています，後でもう一度お試しください。",
   "A single IP address can be used for a maximum of two KYC verifications": "単一の IP アドレスは、最大で 2 回の KYC 認証に使用できます。",
